--- a/master_m.css
+++ b/master_m.css
@@ -20,8 +20,10 @@ header{
         height: 844px;
         text-align: center;
         display:flex; 
-        justify-content: center; /* 가로 중앙 정렬 */
-    } /* 세로 중앙 정렬? 후 위치 조정 */
+        justify-content: center; 
+        background-color:black ;
+
+    } 
 
 .wrap02{position: relative;
         width:100%;
