--- a/master_m.css
+++ b/master_m.css
@@ -20,10 +20,9 @@ header{
         height: 844px;
         text-align: center;
         display:flex; 
-        justify-content: center; 
+        justify-content: center; /* 가로 중앙 정렬 */
         background-color:black ;
-
-    } 
+    } /* 세로 중앙 정렬? 후 위치 조정 */
 
 .wrap02{position: relative;
         width:100%;
@@ -325,4 +324,23 @@ header{
     background-repeat: no-repeat;
     background-position: center;
     margin-top: 25px; 
+}
+.wrap10{
+    position: relative; 
+        width:100%;
+        height: 30px;
+        text-align: center;
+        background-color: #4B4B4B;
+
+}
+.c10{
+    background-image: url(img/m_10_01.png);
+    width: 100%;
+    height: 30px;
+    background-size: contain;
+    position: absolute;
+    align-items: center;
+    background-repeat: no-repeat;
+    background-position: center;
+
 }
