--- a/master_m.css
+++ b/master_m.css
@@ -75,7 +75,7 @@ header{
 
 .wrap09{position: relative; 
         width:100%;
-        height: 1233px;
+        height: 1459px;
         text-align: center;
         background-color: #E8E8E8;
     }
@@ -317,7 +317,7 @@ header{
 .c09{
     background-image: url(img/m_09_01.png);
     width: 100%;
-    height: 1185px;
+    height: 1376px;
     background-size: contain;
     position: absolute;
     align-items: center;
@@ -325,6 +325,20 @@ header{
     background-position: center;
     margin-top: 25px; 
 }
+    .c09_video{
+        width: 100%;
+        position: absolute;
+        align-items: center;
+        background-repeat: no-repeat;
+        background-position: center;
+        margin-top: 1168px;
+        z-index: 4;
+
+    }
+    #v_09{
+        width: 370px;
+
+    }
 .wrap10{
     position: relative; 
         width:100%;
